Backend/PingEchoParser.java
/* Generated By:JavaCC: Do not edit this line. PingEchoParser.java */
import java.io.*;

import java.util.*;



public class PingEchoParser implements PingEchoParserConstants {

    public static Map<String, String> map = new HashMap<String, String>();

    public static Token exceptionHandlingCallee;

    public static Map<String, String> tacticParticipatingObjects = new LinkedHashMap<String, String>();

    public static int numberOfChecks = 0;



    public static void main(String[] args) throws ParseException {

        try {

          Scanner scanner = new Scanner(System.in);

            StringBuilder inputBuilder = new StringBuilder();



            while (scanner.hasNextLine()) {

                String line = scanner.nextLine();

                inputBuilder.append(line).append("\n");

            }

            scanner.close();



            String traceInput = inputBuilder.toString();



            PingEchoParser parser = new PingEchoParser(new java.io.StringReader(traceInput));



            System.out.println("\n===========================================================================");

            System.out.println("                   TACTIC DETECTION SYSTEM INITIALIZED  ");

            System.out.println("===========================================================================\n");

            System.out.println("\nPingSender:TracePingSender ->METHOD->PingReceiver:TracePingReceiver ");

            System.out.println("\nPingSender:TracePingSender ->METHOD->PingReceiver:TracePingReceiver");

            System.out.println("\nOptional Block :  ");

            System.out.println("\nPingSender:TracePingSender ->METHOD->FaultMonitorTraceFaultMonitor   ");

            System.out.println("\nFaultMonitorTraceFaultMonitor->METHOD->FaultMonitorTraceFaultMonitor ");

            System.out.println("\nPingReceiver:TracePingReceiver->METHOD-> PingSender:TracePingSender");

            System.out.println("===========================================================================\n");

            parser.PingEcho();



            System.out.println("\n=======================================================================");

            System.out.println("                            ANALYSIS SUMMARY  ");

            System.out.println("=======================================================================");

            System.out.println(" Total PingEcho Tactic occurrences detected: " + numberOfChecks);

            System.out.println("=======================================================================");



            if (!tacticParticipatingObjects.isEmpty()) {

                System.out.println("\n=======================================================================");





                for (Map.Entry<String, String> entry : tacticParticipatingObjects.entrySet()) {

                    System.out.println(" " + entry.getKey() + " --> " + entry.getValue());

                }



                System.out.println("\n Total PingEcho Tactic occurrences detected: " + numberOfChecks);

            } else {

                System.out.println("No PingEcho tactics detected.");

            }



        } catch (Exception e) {

            System.out.println(" Error: " + e.getMessage());

            e.printStackTrace();

        }

    }

// ------------------------ GRAMMAIRE ------------------------
  static final public void PingEcho() throws ParseException {
    A();
    B();
    C();
  }

  static final public void A() throws ParseException {
             Token caller; Token callee;
    jj_consume_token(CALLER);
    caller = jj_consume_token(LITERAL);
                                  map.put("caller", caller.image);
    jj_consume_token(COMMA);
    jj_consume_token(METHOD);
    jj_consume_token(LITERAL);
    jj_consume_token(COMMA);
    jj_consume_token(CALLEE);
    callee = jj_consume_token(LITERAL);
                                          map.put("callee", callee.image);
    jj_consume_token(SEMICOLON);
        System.out.println( caller.beginLine + "|PingSender: " + caller.image + " --Ping--> PingReceiver: " + callee.image);
  }

  static final public void B() throws ParseException {
             Token caller; Token callee;
    if (getToken(2).image.equals(map.get("callee"))) {
      jj_consume_token(CALLER);
      caller = jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(METHOD);
      jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(CALLEE);
      callee = jj_consume_token(LITERAL);
            if (!callee.image.equals(map.get("caller"))) {

                System.out.println(caller.beginLine + "|  ERROR! Unexpected CALLER or CALLEE at PingEcho response in the ligne:"+caller.beginLine  );

                System.out.println("-----------------------------------------------------------------------");

            } else {

                tacticParticipatingObjects.put("PingSender", callee.image);

                tacticParticipatingObjects.put("PingReceiver", caller.image);

                numberOfChecks++;

                System.out.println( caller.beginLine + "| PingReceiver: " + caller.image + " --Echo--> PingSender: " + callee.image);

                System.out.println(" PingEcho tactic detected.\n-----------------------------------------------------------------------");

            }
      jj_consume_token(SEMICOLON);
    } else if (jj_2_1(1)) {
      E();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void C() throws ParseException {
    if (getToken(2).image.equals(map.get("caller"))) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        A();
        B();
        C();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } else {
      H();
    }
  }

  static final public void E() throws ParseException {
             Token caller;
    if (getToken(2).image.equals(map.get("caller"))) {
      jj_consume_token(CALLER);
      caller = jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(METHOD);
      jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(CALLEE);
      exceptionHandlingCallee = jj_consume_token(LITERAL);
      jj_consume_token(SEMICOLON);
            System.out.println( caller.beginLine + "| PingSender: " + caller.image + " --NotifyException--> FaultMonitor: " + exceptionHandlingCallee.image);
      F();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        PingEcho();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void F() throws ParseException {
             Token caller; Token callee;
    if (getToken(2).image.equals(exceptionHandlingCallee.image) && getToken(8).image.equals(exceptionHandlingCallee.image)) {
      jj_consume_token(CALLER);
      caller = jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(METHOD);
      jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(CALLEE);
      callee = jj_consume_token(LITERAL);
      jj_consume_token(SEMICOLON);
            System.out.println( caller.beginLine + "| FaultMonitor: " + caller.image + " --HandleExeception--> FaultMonitor: " + callee.image);
      B();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CALLER:
        PingEcho();
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void H() throws ParseException {
             Token caller; Token callee;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CALLER:
      jj_consume_token(CALLER);
      caller = jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(METHOD);
      jj_consume_token(LITERAL);
      jj_consume_token(COMMA);
      jj_consume_token(CALLEE);
      callee = jj_consume_token(LITERAL);
      jj_consume_token(SEMICOLON);
            System.out.println(caller.beginLine + "|  ERROR! Unexpected CALLER or CALLEE at PingEcho response in the ligne:"+caller.beginLine  );

            System.out.println("-----------------------------------------------------------------------");
      C();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3_1() {
    if (jj_3R_1()) return true;
    return false;
  }

  static private boolean jj_3R_3() {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_scan_token(CALLER)) return true;
    return false;
  }

  static private boolean jj_3R_2() {
    if (jj_scan_token(CALLER)) return true;
    return false;
  }

  static private boolean jj_3R_1() {
    Token xsp;
    xsp = jj_scanpos;
    jj_lookingAhead = true;
    jj_semLA = getToken(2).image.equals(map.get("caller"));
    jj_lookingAhead = false;
    if (!jj_semLA || jj_3R_2()) {
    jj_scanpos = xsp;
    if (jj_3R_3()) return true;
    }
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public PingEchoParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  /** Whether we are looking ahead. */
  static private boolean jj_lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x80,0x80,0x80,0x80,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[1];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public PingEchoParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PingEchoParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PingEchoParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public PingEchoParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new PingEchoParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public PingEchoParser(PingEchoParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(PingEchoParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = jj_lookingAhead ? jj_scanpos : token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      boolean exists = false;
      for (java.util.Iterator it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          exists = true;
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              exists = false;
              break;
            }
          }
          if (exists) break;
        }
      }
      if (!exists) jj_expentries.add(jj_expentry);
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[12];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 12; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 1; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
